--- a/Kodi-OlympicaEstereo/App.config
+++ b/Kodi-OlympicaEstereo/App.config
@@ -3,4 +3,11 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+    <system.net>
+  <defaultProxy enabled="false">
+    <proxy/>
+    <bypasslist/>
+    <module/>
+  </defaultProxy>
+</system.net>
 </configuration>
